@@ -1,5 +1,8 @@
 2011-07-31  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: bug fix: Opening MPEG files with numbers in their name
+	from folders with e.g. Cyrillic names failed on Windows.
+
 	* mkvmerge: bug fix: Several elements are not written when
 	creating WebM compliant files. In the segment headers: SegmentUID,
 	SegmentFamily, ChapterTranslate, PreviousSegmentUID,
